--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Mehery Test</h1>
+    <script src='https://cdn.jsdelivr.net/gh/cherrybase/cherrybase.github.io@gh-pages/plugins/customer.js?theme=bubble'>
+    ({
+      "domain" : "binavdemo.mehery.xyz",
+      "channelId" : "web:binavgautam.github.io",
+      "channelKey" : "1grlzbankn2isKWY5CGO4GZ",
+      "config" : {}
+    })
+    </script>
 </body>
 </html>
