--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>demo</title>
+    <title>Mehery Test</title>
 </head>
 <body>
     <h1>Mehery Test</h1>
@@ -16,5 +16,7 @@
       "config" : {}
     }
     </script>
+    <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+    <script type="IN/FollowCompany" data-id="0000" data-counter="bottom"></script>
 </body>
 </html>
