--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       "config" : {}
     }
     </script>
-    <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+    <script src="https://www.linkedin.com/company/82356330" type="text/javascript"> lang: en_US</script>
     <script type="IN/FollowCompany" data-id="0000" data-counter="bottom"></script>
 </body>
 </html>
